closest thing i made to working

--- a/ui/src/index.html
+++ b/ui/src/index.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <base href="/" />
-  <title>Angular 8 - JWT Authentication Tutorial & Example</title>
+  <meta charset="utf-8">
+  <title>Dining Place Generator</title>
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <!-- bootstrap css -->
-  <link href="//netdna.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" />
+  <link  rel= 'icon' href="https://www.openhabfoundation.org/logos/musala-soft.png">
 </head>
 <body>
-<app>Loading...</app>
+<app-root></app-root>
 </body>
 </html>
